<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">My Expensat</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_accounts">Accounts</string>
    <string name="nav_item_income">Income</string>
    <string name="nav_item_expenses">Expenses</string>
    <string name="nav_item_upcoming_bills">Upcoming Bills</string>
    <string name="nav_item_unpaid_bills">Unpaid Bills</string>
    <string name="nav_item_calculator">Calculator</string>
    <string name="nav_item_reports">Reports</string>
    <string name="nav_item_transfer">Transfer</string>
    <string name="nav_item_summary">Summary</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_viewexpense">Viewexpense</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_accounts</item>
        <item>@string/nav_item_income</item>
        <item>@string/nav_item_expenses</item>
        <item>@string/nav_item_upcoming_bills</item>
        <item>@string/nav_item_unpaid_bills</item>
        <item>@string/nav_item_calculator</item>
        <item>@string/nav_item_reports</item>
        <item>@string/nav_item_transfer</item>
        <item>@string/nav_item_summary</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_viewexpense</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_upcoming_bills">Upcoming Bills</string>
    <string name="title_unpaid_bills">Unpaid Bills</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_reports">Reports</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_summary">Summary</string>
    <string name="title_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_button">DEL</string>
    <string name="AC_button">AC</string>
    <string name="seven_burron">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="add_button">+</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="substract_button">-</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="multiply_button">x</string>
    <string name="dot_button">.</string>
    <string name="zero_button">0</string>
    <string name="equal_button">=</string>
    <string name="division_button">/</string>
    <string name="paren">(   )</string>
    <string name="back">Go Back</string>


    <!-- add expense fragment layout-->

    <string name="Spinner_title">Select Category</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="add_expense">Add Expenses</string>
    <string name="colon">:</string>
    <string name="pick_date">Date Picker</string>
    <string name="account_type">Account</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="select_date">Enter Date</string>
    <string name="expense_view_title">Expenses</string>
    <string name="my_expenses">My Expenses</string>
    <string name="add_new_expense">Add Expense</string>
    <string name="currency_sign" >$</string>
    <string name="categoory">Category</string>

    <string-array name="Account">
        <item>Cash</item>
        <item>Check</item>
        <item>Credit Card</item>
        <item>Debit</item>
        <item>Others</item>
    </string-array>
    <string-array name="expenses_category">
        <item>Automobile</item>
        <item>Donation</item>
        <item>Entertainment</item>
        <item>Family</item>
        <item>Food</item>
        <item>Health Care</item>
        <item>Home Office</item>
        <item>Household</item>
        <item>Insurance</item>
        <item>Loans</item>
        <item>Other</item>
        <item>Personal</item>
        <item>Restaurants</item>
        <item>Tax</item>
        <item>Travel</item>
        <item>Utilities</item>
        <item>Vacation</item>
    </string-array>

</resources>